# RoboVIbeCoding

./: .gitignore  .replit  build_obby.py  main.py  prompt_gemini.py  pyproject.toml  replit.md
attached_assets/: Pasted-Project-RobloxStudio-Agentic-AI-RoboVibeCode-Create-a-complete-fully-autonomous-agentic-AI-sy-1759850662727_1759850662731.txt
backend/: advanced_planner.py  agentic_engine.py  agentic_engine_enhanced.py  app.py  execution_engine.py  file_manager.py  gemini_client.py  mcp_client.py  roblox_knowledge.py  roblox_templates.py  spatial_engine.py  test_mcp.py  tool_registry.py
frontend/: index.html  script.js  style.css
