[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.3.0",
]
